[gd_scene load_steps=3 format=3 uid="uid://cju4qauponcev"]

[ext_resource type="Script" uid="uid://3fmueepnkeyg" path="res://globals/game_state.gd" id="1_wrrqy"]
[ext_resource type="Resource" uid="uid://bfncameot2in6" path="res://game_state/default_game_state.tres" id="2_lsnpl"]

[node name="GameState" type="Node"]
script = ExtResource("1_wrrqy")
default_game_state = ExtResource("2_lsnpl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="SaveButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="ResetButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"
